deps/curl: Disabling GCC type checks

--- a/deps/curl-7.51.0/Makefile
+++ b/deps/curl-7.51.0/Makefile
@@ -338,6 +338,7 @@ PRJ_CFLAGS += \
 			 -DBUILDING_LIBCURL \
 			 -DCURL_DISABLE_LDAP \
 			 -DCURL_STATICLIB \
+			 -DUSE_OPENSSL \
 			 -Iinclude \
 			 -Ilib
 
