--- a/deps/Makefile
+++ b/deps/Makefile
@@ -65,7 +65,7 @@ realclean:
 	+cd libffi-3.0.11 && $(_MAKE) realclean
 
 distclean:
-	$(MAKE) -f $(_CF_DIR)Cleanfile distclean distclean_all_subdirs
+	$(_MAKE) -f $(_CF_DIR)Cleanfile distclean distclean_all_subdirs
 
 Makefile: ;
 $(_CF_DIR)crossplatform.mk: ;
