tarball: add (C, C++ and Python) bindings targets and makefiles. update .gitignore to include generated bindings files for C, C++ and Python. fix distclean to remove python intermediate files.

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,20 @@ dat/
 ehthumbs.db
 Icon
 Thumbs.db
+
+# Generated Bindings
+bindings/c/*.c
+bindings/c/*.h
+bindings/cpp/*.cpp
+bindings/cpp/*.hpp
+bindings/py/cffi-*.h
+bindings/py/build_*.py
+bindings/py/py*.py
+
+# Compiled Python
+*.pyc
+*.pyd
+__pycache__/
+
+# CFFI generated source
+_py*.c
