--- a/bgen/Makefile
+++ b/bgen/Makefile
@@ -127,7 +127,7 @@ LIBS += \
 endif
 
 PRJ_CFLAGS += \
-	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FPIC) -w
+	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FPIC) -w -DREPOSITORY_VERSION="\"$(REPOSITORY_VER)\""
 
 ECFLAGS += -module $(MODULE)
 ECFLAGS += \
