--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -2,7 +2,7 @@ ifneq ($(V),1)
 .SILENT:
 endif
 
-.PHONY: all bootstrap cleantarget clean realclean distclean libec ecp ecc ecs
+.PHONY: all bootstrap cleantarget clean realclean wipeclean distclean libec ecp ecc ecs
 
 CONFIG := release
 
@@ -53,6 +53,13 @@ realclean:
 	+cd ecp && $(_MAKE) realclean
 	+cd ecc && $(_MAKE) realclean
 	+cd ecs && $(_MAKE) realclean
+
+wipeclean:
+	+cd bootstrap && $(_MAKE) wipeclean
+	+cd libec && $(_MAKE) wipeclean
+	+cd ecp && $(_MAKE) wipeclean
+	+cd ecc && $(_MAKE) wipeclean
+	+cd ecs && $(_MAKE) wipeclean
 
 distclean:
 	$(_MAKE) -f $(_CF_DIR)Cleanfile distclean distclean_all_subdirs
