--- a/deps/Makefile
+++ b/deps/Makefile
@@ -2,7 +2,7 @@ ifneq ($(V),1)
 .SILENT:
 endif
 
-.PHONY: freetype jpeg png gif z curl ffi cleantarget clean realclean distclean
+.PHONY: freetype jpeg png gif z curl ffi cleantarget clean realclean wipeclean distclean
 
 _CF_DIR = ../
 
@@ -73,6 +73,15 @@ realclean:
 	+cd libungif-4.1.1 && $(_MAKE) realclean
 	+cd curl-7.51.0 && $(_MAKE) realclean
 	+cd libffi-3.0.11 && $(_MAKE) realclean
+
+wipeclean:
+	+cd freetype-2.3.12 && $(_MAKE) wipeclean
+	+cd libpng-1.6.12 && $(_MAKE) wipeclean
+	+cd zlib-1.2.8 && $(_MAKE) wipeclean
+	+cd jpeg-9a && $(_MAKE) wipeclean
+	+cd libungif-4.1.1 && $(_MAKE) wipeclean
+	+cd curl-7.51.0 && $(_MAKE) wipeclean
+	+cd libffi-3.0.11 && $(_MAKE) wipeclean
 
 distclean:
 	$(_MAKE) -f $(_CF_DIR)Cleanfile distclean distclean_all_subdirs
