--- a/ear/extract/Makefile
+++ b/ear/extract/Makefile
@@ -2,7 +2,7 @@ ifneq ($(V),1)
 .SILENT:
 endif
 
-.PHONY: all objdir cleantarget clean realclean distclean
+.PHONY: all objdir cleantarget clean realclean wipeclean distclean
 
 # CORE VARIABLES
 
@@ -267,6 +267,9 @@ clean: cleantarget
 	$(call rm,$(BOWLS))
 	$(call rm,$(IMPORTS))
 	$(call rm,$(SYMBOLS))
+
+wipeclean:
+	$(call rmr,obj/)
 
 realclean: cleantarget
 	$(call rmr,$(OBJ))
