--- a/compiler/ecp/Makefile.bootstrap
+++ b/compiler/ecp/Makefile.bootstrap
@@ -2,7 +2,7 @@ ifneq ($(V),1)
 .SILENT:
 endif
 
-.PHONY: all objdir cleantarget clean realclean distclean
+.PHONY: all objdir cleantarget clean realclean wipeclean distclean
 
 # CORE VARIABLES
 
@@ -135,6 +135,9 @@ clean: cleantarget
 
 realclean: cleantarget
 	$(call rmr,$(OBJ))
+
+wipeclean:
+	$(call rmr,obj/)
 
 distclean:
 	$(_MAKE) -f $(_CF_DIR)Cleanfile distclean distclean_all_subdirs
