--- a/eda/drivers/sqliteCipher/Makefile
+++ b/eda/drivers/sqliteCipher/Makefile
@@ -2,7 +2,7 @@ ifneq ($(V),1)
 .SILENT:
 endif
 
-.PHONY: all objdir cleantarget clean realclean distclean openssl_debug
+.PHONY: all objdir cleantarget clean realclean wipeclean distclean openssl_debug
 
 # CORE VARIABLES
 
@@ -251,6 +251,9 @@ clean: cleantarget
 
 realclean: cleantarget
 	$(call rmr,$(OBJ))
+
+wipeclean:
+	$(call rmr,obj/)
 
 distclean:
 	$(_MAKE) -f $(_CF_DIR)Cleanfile distclean distclean_all_subdirs
