--- a/ide/Makefile
+++ b/ide/Makefile
@@ -2,7 +2,7 @@ ifneq ($(V),1)
 .SILENT:
 endif
 
-.PHONY: all objdir cleantarget clean realclean distclean src/about.ec
+.PHONY: all objdir cleantarget clean realclean wipeclean distclean src/about.ec
 
 # CORE VARIABLES
 
@@ -762,6 +762,9 @@ endif
 
 realclean: cleantarget
 	$(call rmr,$(OBJ))
+
+wipeclean:
+	$(call rmr,obj/)
 
 distclean:
 	$(_MAKE) -f $(_CF_DIR)Cleanfile distclean distclean_all_subdirs
